src/test/deca/context/invalid/provided/invalide_class_04_TypeField.deca
// Description : test des types des attributs
// Sortie:
//  Le type B n'est pas définie. 
class A{
    B x;
}